src/base/objects/OpportunityLineItem/fields/Availability_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Availability_Commitment__c</fullName>
    <label>Availability Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99.9%</fullName>
            </value>
            <value>
                <fullName>99.0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>