src/base/objects/OpportunityLineItem/fields/BT_Product__c.field-meta.xml
<CustomField>
    <fullName>BT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Product</label>
    <referenceTo>BT_Product__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>