src/base/objects/OpportunityLineItem/fields/Had_BT_Product__c.field-meta.xml
<CustomField>
    <fullName>Had_BT_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Had BT Product</label>
    <type>Checkbox</type>
</CustomField>