src/base/objects/OpportunityLineItem/fields/Hosted_Service__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Service__c</fullName>
    <label>Hosted Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>