src/base/objects/OpportunityLineItem/fields/Node_Count__c.field-meta.xml
<CustomField>
    <fullName>Node_Count__c</fullName>
    <label>Node Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>