src/base/objects/OpportunityLineItem/fields/Participatory_Fee__c.field-meta.xml
<CustomField>
    <fullName>Participatory_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Participatory Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>