src/base/objects/OpportunityLineItem/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <label>Protocol</label>
    <length>100</length>
    <type>Text</type>
</CustomField>