src/base/objects/OpportunityLineItem/fields/SubTotal_Node_Value__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Node_Value__c</fullName>
    <formula>Node_Count__c *  Subscription_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal Node Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>